Project

General

Profile

Actions

Bug #50976

closed

mds: scrub error on inode 0x1

Added by Milind Changire almost 3 years ago. Updated almost 3 years ago.

Status:
Resolved
Priority:
Normal
Category:
-
Target version:
% Done:

0%

Source:
Q/A
Tags:
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
qa, scrub
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2021-03-22T16:31:47.253+0000 7fbdabaf8700 -1 mds.0.scrubstack _validate_inode_done scrub error on inode [inode 0x1 [...a,head] / auth v5100 ap=2 snaprealm=0x55dfe8eaf800 f(v0 m2021-03-18T10:43:03.174944+0000 18=7+11) n(v670 rc2021-03-22T11:49:24.978189+0000 b46042796335 rs4 221=28+193)/n(v0 rc2021-03-15T06:23:08.228733+0000 1=0+1) old_inodes=8 (idft sync r=1) (inest sync r=1) (ifile sync r=1) (iversion lock) caps={49181=pAsLsXsFs/-@0,49225=pAsLsXsFs/-@0,49246=pAsLsXsFs/-@0,49258=pAsLsXsFs/-@0,49295=pAsLsXsFs/-@0,51580=pAsLsXsFs/-@0,54516=pAsLsXsFs/-@0,54564=pAsLsXsFs/-@0,54678=pAsLsXsFs/-@0,57156=pAsLsXsFs/-@0} | dirtyscattered=0 lock=3 dirfrag=1 caps=1 openingsnapparents=0 dirty=1 waiter=0 authpin=1 scrubqueue=0 0x55dfe8afbb80]: {"performed_validation":true,"passed_validation":false,"backtrace":{"checked":true,"passed":false,"read_ret_val":-61,"ondisk_value":"(-1)0x0:[]//","memoryvalue":"(30)0x1:[]//","error_str":"failed to read off disk; see retval"},"raw_stats":{"checked":true,"passed":true,"read_ret_val":0,"ondisk_value.dirstat":"f(v0 m2021-03-18T10:43:03.174944+0000 18=7+11)","ondisk_value.rstat":"n(v0 rc2021-03-22T11:49:24.978189+0000 b46042796335 rs4 221=28+193)","memory_value.dirrstat":"f(v0 m2021-03-18T10:43:03.174944+0000 18=7+11)","memory_value.rstat":"n(v670 rc2021-03-22T11:49:24.978189+0000 b46042796335 rs4 221=28+193)","error_str":""},"return_code":-61}

Related issues 1 (0 open1 closed)

Copied to CephFS - Backport #51085: pacific: mds: scrub error on inode 0x1ResolvedPatrick DonnellyActions
Actions #1

Updated by Milind Changire almost 3 years ago

In this case, the backtrace check for inode 0x1 has failed.
Root Inode backtrace needs to be saved as soon as the inode is created.

Actions #2

Updated by Milind Changire almost 3 years ago

  • Pull request ID set to 41551
Actions #3

Updated by Milind Changire almost 3 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Patrick Donnelly almost 3 years ago

  • Description updated (diff)
  • Target version set to v17.0.0
  • Source set to Q/A
  • Backport set to pacific

Milind, please paste the run this failure comes from.

Actions #6

Updated by Milind Changire almost 3 years ago

  • Pull request ID changed from 41551 to 41639
Actions #7

Updated by Patrick Donnelly almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #8

Updated by Backport Bot almost 3 years ago

Actions #9

Updated by Loïc Dachary almost 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF