mds/scrub: skip backtrace scrub for inode 0x1

Since a backtrace for inode 0x1 doesn't exist and doesn't make sense it
is wise to skip this inode and declare it as passed.

Fixes: https://tracker.ceph.com/issues/50976
Signed-off-by: Milind Changire <mchangir@redhat.com>